Some code cleanups, done with footer design

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <li class="nav-link"><a href="#whyme" class="nav-items">Reasons</a></li>
             <li class="nav-link"><a href="#talk" class="nav-items">Contact</a></li>
             <li class="nav-link"><a href="" class="nav-items">Blog</a></li>
-            <li class="nav-link"><a href="" class="nav-items">About Me</a></li>
+            <!-- <li class="nav-link"><a href="" class="nav-items">About Me</a></li> -->
         </ul>
     </nav>
     <!--    <div class="eyes">
@@ -58,7 +58,7 @@
                     <p>It also boasts of a fully functional SQL database built with PostgreSQL </p>
                 </p>
                 <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -76,7 +76,7 @@
                     </p>
                 </p>
                 <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <p>It is built in vanilla js and is simple to set up.</p>
                 </p>
                 <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <p>And with a click, potential clients can be redirected to a social page to learn more about the company
                 </p>
                 <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -130,7 +130,7 @@
                     <p>A survey form that can be used to get valuable feedback from customers and stakeholders</p>
                 </p>
                 <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons"></a> <a href=""> <img src="./img/contact/link.svg" alt=""
+                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -272,13 +272,13 @@
     </section>
 
     <footer class="footer">
-        <p> <img src="./img/contact/copyright.svg" alt="" class="copy-icon"> Designed and developed by <a href="https://twitter.com/alara_joel" target="_blank"> Alara O. Joel</a> a.k.a <a href="https://github.com/stealthman22" target="_blank"> Stealthman22</a>
+        <p> <img src="./img/contact/copyright.svg" alt="" class="copy-icon"> Designed and developed by <a href="https://twitter.com/alara_joel" target="_blank"> Alara O. Joel</a> a.k.a <a href="https://github.com/stealthman22" target="_blank"> Alara_Stealth</a>
         </p>
-        <p>Authors of the background images can be linked here at <a href="https://www.pexels.com/@alara-joel-597602/collections/" target="_blank">pexels</a> also Quickly build your mockups here
+        <p>Authors of the background images can be linked here at <a href="https://www.pexels.com/@alara-joel-597602/collections/" target="_blank">pexels</a> also quickly build your mockups here
             <a href="https://mockuphone.com/" target="_blank">mockuphone</a> </p>
-        <p> Some icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>, <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank">Vectors Market</a>, <a href="https://www.flaticon.com/authors/pixel-perfect"
+        <p> Some icons were from <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik,</a> <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank">Vectors Market,</a> <a href="https://www.flaticon.com/authors/pixel-perfect"
                 title="Pixel perfect" target="_blank">Pixel
-                perfect</a> and <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency" target="_blank">fps web agency</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> www.flaticon.com</a> </p>
+                perfect,</a> <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency" target="_blank">fps web agency</a> and <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> flaticon</a> </p>
         <p>Other icons from <a target="_blank" href="https://icons8.com">Icons8</a> and
             <a href="https://freesvg.org/" target="_blank">freesvg</a></p>
     </footer>
