--- a/src/index.html
+++ b/src/index.html
@@ -145,8 +145,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-one"></div>
             <div class="reasons-card-text">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Resilience</h2>
+                <p>I do not stop, I dig deeper until I produce tangible results. Whatever be the case, I prevail.
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-odd">
@@ -158,8 +158,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-three"></div>
             <div class="reasons-card-text">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Concentration</h2>
+                <p>I am capable of pouring in the necessary hours that is needed to bring projects and tasks to fruition.
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-odd">
@@ -169,8 +169,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-two"></div>
             <div class="reasons-card-text ">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Boldness</h2>
+                <p>I am never afraid to take on mammoth and herculian tasks. So don't worry about how, give me the what.
                 </p>
             </div>
             <div class="reasons-footer reasons-footer-even">
@@ -179,8 +179,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-four"></div>
             <div class="reasons-card-text">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Modern</h2>
+                <p>I strive to stay abrest with modern techniques and approaches, hence always giving my team/clients a competitive edge
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-odd">
@@ -191,8 +191,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-five"></div>
             <div class="reasons-card-text">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Imagination</h2>
+                <p>I am supercharged with a creative mind, that allows my imagination run wild, hence I bring freshness to the table always.
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-even">
@@ -202,8 +202,8 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-six"></div>
             <div class="reasons-card-text">
-                <h2>Lorem</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam quis consequuntur esse eveniet eos minima praesentium ipsa assumenda cumque, minus sapiente mollitia sit, suscipit consequatur ab dicta commodi magni sunt?
+                <h2>Team-Spirit</h2>
+                <p> I thrive well in team-motivated environments, and always ensure to carry team members and stakeholders along..
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-even">
