Little color edit on the footer

--- a/src/index.html
+++ b/src/index.html
@@ -253,18 +253,23 @@
             <ul class="social">
                 <li>
                     <a href="https://www.linkedin.com/in/alara-joel-b16865b6/" target="_blank"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon"></a>
+                    <p class="social-txt">Linkedin</p>
                 </li>
                 <li>
                     <a href="https://twitter.com/alara_joel" target="_blank"><img src="./img/contact/043-twitter.svg" alt="" class="social-icon"></a>
+                    <p class="social-txt">Twitter</p>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/alara_joel_stealth/" target="_blank"><img src="./img/contact/025-instagram.svg" alt="" class="social-icon"></a>
+                    <p class="social-txt">instagram</p>
                 </li>
                 <li>
                     <a href="https://github.com/stealthman22" target="_blank"><img src="./img/contact/038-github.svg" alt="" class="social-icon"></a>
+                    <p class="social-txt">GitHub</p>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/alaratj" target="_blank"><img src="./img/contact/021-facebook.svg" alt="" class="social-icon"></a>
+                    <p class="social-txt">Facebook</p>
                 </li>
             </ul>
         </div>
