Cleaning up buttons trasnition

--- a/src/index.html
+++ b/src/index.html
@@ -230,17 +230,19 @@
                 </li>
                 <li>
                     <a href="mailto:tdotonline@gmail.com">
-                        <button><img src="./img/contact/icons8-gmail.svg" alt="" class="message-icon">
+                        <button class="message-btn"><img src="./img/contact/icons8-gmail.svg" alt=""
+                                class="message-icon">
                             tdotonline@gmail.com</button>
                     </a>
                 </li>
                 <li>
                     <a href="tel: +233240070101">
-                        <button><img src="./img/contact/phone.svg" alt="" class="message-icon"> +233240070101 </button>
+                        <button class="message-btn"><img src="./img/contact/phone.svg" alt="" class="message-icon">
+                            +233240070101 </button>
                     </a>
                 </li>
                 <li>
-                    <button>
+                    <button class="message-btn">
                         <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103
                     </button>
                 </li>
