--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
         <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 
+    <!-- Showcase -->
+
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
