changed code link svg in showcase section

--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,11 @@
                     </p>
                     <p>It also boasts of a fully functional SQL database built with PostgreSQL </p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
-                            class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href="https://github.com/stealthman22/smart-brain" target="_blank"> <img
+                            src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a>
+                    <a href="https://image-recog-front-end.herokuapp.com/" target="_blank"> <img
+                            src="./img/showcase/link.svg" alt="" class="info-icons"> </a>
+                </span>
             </div>
         </div>
         <div class=" cards  cards-two">
@@ -77,7 +79,7 @@
                     <p>It uses react for the UI, and redux for state management, so the state of the search box can be recorded at all times. The profiles structure are fetched from an API.
                     </p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
+                <span class="info-bottom"> <a href=""> <img src="./img/showcase/web-programming.svg" alt=""
                             class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
@@ -95,9 +97,10 @@
                     <p>It has a beautiful carousel that highlights the teams main strengths and skills.</p>
                     <p>It is built in vanilla js and is simple to set up.</p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
-                            class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href="https://codepen.io/alara_joel_stealth/pen/yrjLjB" target="_blank">
+                        <img src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a> <a
+                        href="https://codepen.io/alara_joel_stealth/full/yrjLjB" target="_blank"> <img
+                            src="./img/showcase/link.svg" alt="" class="info-icons"> </a></span>
             </div>
         </div>
         <div class=" cards  cards-four">
@@ -111,8 +114,9 @@
                 <p>It uses an form that submits directly to an email account, for fast processing. </p>
                 <p>And with a click, potential clients can be redirected to a social page to learn more about the company
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
+                <span class="info-bottom"> <a href="https://github.com/stealthman22/stealthman22.github.io"
+                        target="_blank"> <img src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a>
+                    <a href="https://stealthman22.github.io/" target="_blank"> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
@@ -120,20 +124,20 @@
         <div class=" cards cards-five">
             <div class=" cards-main ">
                 <img src="../src/img/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
-                <img src="../src/img/showcase/game landing_ipad_white_portrait.png" alt="" class="card-pic-ten">
+                <!-- <img src="../src/img/showcase/game landing_ipad_white_portrait.png" alt="" class="card-pic-ten"> -->
 
 
             </div>
             <div class=" cards-info ">
-                <h1 class="info-head">Survey and Product Page</h1>
+                <h1 class="info-head">Survey form Page</h1>
                 <p class="info-body">
-                    <p>Two quick projects that can be utilized together.</p>
-                    <p>A product page for a gaming shop, that deal in all forms of consoles and kits</p>
+                    <p>An extensively detailed survery form template</p>
                     <p>A survey form that can be used to get valuable feedback from customers and stakeholders</p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/contact/038-github.svg" alt=""
-                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
-                            class="info-icons"> </a></span>
+                <span class="info-bottom"> <a href="https://github.com/stealthman22/product-page-FCC" target="_blank">
+                        <img src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a> <a
+                        href="https://stealthman22.github.io/survey-form-FCC/" target="_blank"> <img
+                            src="./img/showcase/link.svg" alt="" class="info-icons"> </a></span>
             </div>
         </div>
     </section>
