changed oe of the svgs' in reasons section

--- a/src/index.html
+++ b/src/index.html
@@ -248,9 +248,11 @@
                     </a>
                 </li>
                 <li>
-                    <button class="message-btn">
-                        <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103
-                    </button>
+                    <a target="_blank" href="https://api.whatsapp.com/send?phone=233509682103">
+                        <button class="message-btn">
+                            <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103
+                        </button>
+                    </a>
                 </li>
                 <!--  <li><button>https://www.linkedin.com/in/alara-joel-b16865b6/</button></li> -->
             </ul>
@@ -299,7 +301,7 @@
         </p>
         <p>Authors of the background images can be linked here at <a href="https://www.pexels.com/@alara-joel-597602/collections/" target="_blank">pexels</a> also quickly build your mockups here
             <a href="https://mockuphone.com/" target="_blank">mockuphone</a> </p>
-        <p> Some icons were from <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik,</a> <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank">Vectors Market,</a> <a href="https://www.flaticon.com/authors/pixel-perfect"
+        <p> Icons are from <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik,</a> <a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank">Vectors Market,</a> <a href="https://www.flaticon.com/authors/pixel-perfect"
                 title="Pixel perfect" target="_blank">Pixel
                 perfect,</a> <a href="https://www.flaticon.com/authors/fps-web-agency" title="fps web agency" target="_blank">fps web agency</a> and <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"> flaticon</a> </p>
         <p>Other icons from <a target="_blank" href="https://icons8.com">Icons8</a> and
