finsihed achievements section

--- a/src/index.html
+++ b/src/index.html
@@ -142,8 +142,61 @@
         </div>
     </section>
 
-    <section class="achieve" id="achievements">
-        <h1>Content coming soon, so move along &#x1F63B;</h1>
+    <section class="timeline" id="achievements">
+        <div class="container left">
+            <div class="content">
+                <h2>January, 2020</h2>
+                <h3>Data Science and Machine Learning </h3>
+                <p>Started the diploma in DS/ML offered by WorldQuant University.</p>
+                <a href="https://wqu.org/programs/data-science" target="_blank">Check it out here</a>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h2>November, 2019</h2>
+                <h3>Cerification: Complete Web Developer</h3>
+                <p> I completed this intensive Zero to Mastery course with tutor Andrei Neagoie.</p>
+                <p>Used React, Node, Express and PostgreSQL</p>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
+            </div>
+        </div>
+        <div class="container left">
+            <div class="content">
+                <h2>May, 2018</h2>
+                <h3>Certification: RWD Principles: Udemy</h3>
+                <p>This Added to my knowledge in RWD principles, by Jonas Schmedtmann.</p>
+                <p>Learn how to build websites, with user experience in mind.</p>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h2>April, 2019</h2>
+                <h3>Certification: RWD: FreeCodeCamp</h3>
+                <p>This was a very intensive one for me, this is how I got my Web Dev groove.</p>
+                <p> Thanks to the FCC community</p>
+                <a href="https://www.freecodecamp.org/certification/alara_joel_stealth/responsive-web-design" target="_blank"> View my certificate here</a>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <h2>2015</h2>
+                <h3>HTML 4 and 5 with CSS: VTC</h3>
+                <p>My introduction into frontend web design.</p>
+                <p>Taught me the very basics</p>
+                <a href="https://www.vtc.com/products/HTML-45-with-CSS-Tutorials.htm" target="_blank"> Check it out here</a>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h2>2014</h2>
+                <h3>Introduction to programming: Udacity</h3>
+                <p>This was where it all began, with the Udacity app</p>
+                <p>Learnt some basic web manipulations with python.</p>
+                <a href="https://www.udacity.com/course/intro-to-programming-nanodegree--nd000" target="_blank"> Check it out here</a>
+            </div>
+        </div>
     </section>
 
     <section class="reasons" id="whyme">
@@ -248,7 +301,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://api.whatsapp.com/send?phone=233509682103">
+                    <a target="_blank" href=" https://wa.me/233509682103">
                         <button class="message-btn">
                             <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103
                         </button>
