--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="nav border_gradient">
+    <nav class="nav">
         <span class="nav-logo">A_S</span>
         <ul class="nav-ul">
 
