done with the navbar autohide on scroll down

--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,8 @@
                 <h3>HTML 4 and 5 with CSS: VTC</h3>
                 <p>My introduction into frontend web design.</p>
                 <p>Taught me the very basics</p>
-                <a href="https://www.vtc.com/products/HTML-45-with-CSS-Tutorials.htm" target="_blank"> Check it out here</a>
+                <a href="https://www.vtc.com/products/HTML-45-with-CSS-Tutorials.htm" target="_blank"> Check it out
+                    here</a>
             </div>
         </div>
         <div class="container right">
@@ -194,7 +195,8 @@
                 <h3>Introduction to programming: Udacity</h3>
                 <p>This was where it all began, with the Udacity app</p>
                 <p>Learnt some basic web manipulations with python.</p>
-                <a href="https://www.udacity.com/course/intro-to-programming-nanodegree--nd000" target="_blank"> Check it out here</a>
+                <a href="https://www.udacity.com/course/intro-to-programming-nanodegree--nd000" target="_blank"> Check
+                    it out here</a>
             </div>
         </div>
     </section>
