almost done nav-links acting up

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
 
 <body>
     <nav class="nav">
+<div class="hamburger">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+</div>
+
         <span class="nav-logo">A_S</span>
         <ul class="nav-ul">
 
