working on the showcase responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -117,10 +117,9 @@
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
-                <p class="info-body">An elegant landing page for a logistics office, to help them get clients contact information and meeting schedule quickly</p>
-                <p>It uses an form that submits directly to an email account, for fast processing. </p>
-                <p>And with a click, potential clients can be redirected to a social page to learn more about the company
-                </p>
+                <p class="info-body">An elegant landing page for an office, to help them get clients contact information and meeting schedule quickly</p>
+                <p>It uses a form that submits directly to an email account, for fast processing, and also a social media link </p>
+ 
                 <span class="info-bottom"> <a href="https://github.com/stealthman22/stealthman22.github.io"
                         target="_blank"> <img src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a>
                     <a href="https://stealthman22.github.io/" target="_blank"> <img src="./img/showcase/link.svg" alt=""
