--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
                 <p class="info-body">
-                    <p>An elegant portfolio template that dev and desing teams can utilize to quickly bootstrap theirs and make necessary changes.</p>
+                    <p>Aportfolio template that devs can utilize to quickly bootstrap theirs by making necessary changes.</p>
                     <p>It has a beautiful carousel that highlights the teams main strengths and skills.</p>
                     <p>It is built in vanilla js and is simple to set up.</p>
                 </p>
@@ -128,7 +128,7 @@
         </div>
 
         <div class=" cards cards-five">
-            <div class=" cards-main ">
+            <div class=" cards-main cards-main-five">
                 <img src="../src/img/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
                 <!-- <img src="../src/img/showcase/game landing_ipad_white_portrait.png" alt="" class="card-pic-ten"> -->
 
