finished showcase and acheivements on RWD mode

--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
             <div class="content">
                 <h2>May, 2018</h2>
                 <h3>Certification: RWD Principles: Udemy</h3>
-                <p>This Added to my knowledge in RWD principles, by Jonas Schmedtmann.</p>
+                <p>This added to my knowledge in RWD principles, by Jonas .</p>
                 <p>Learn how to build websites, with user experience in mind.</p>
                 <a href="https://res.cloudinary.com/stealthman22/image/upload/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
             </div>
