--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
 
     <section class="contact" id="talk">
         <div class="hiring">
-            <h2>You should checkout my Resume </h2>
+            <h3>You should checkout my Resume :)</h3>
             <a href="">
                 <button class="hiring-btn"> Grab a copy
                     <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </button>
@@ -288,7 +288,7 @@
         </div>
         <div class="message">
 
-            <h2> <img src="./img/contact/flash.svg" class="flash-icon" alt="">Want to get in touch with lightning speed ? Reach me here then <img src="./img/contact/048-arrow.svg" alt="" class="down-icon"></h2>
+            <h3> <img src="./img/contact/flash.svg" class="flash-icon" alt="">Want to get in touch with lightning speed ? Reach me here then <img src="./img/contact/048-arrow.svg" alt="" class="down-icon"></h3>
             <ul class="message-list">
                 <li>
                     <a href="mailto:alaratj@hotmail.com">
@@ -309,9 +309,9 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href=" https://wa.me/233201100146">
+                    <a target="_blank" href=" https://wa.me/233509682103">
                         <button class="message-btn">
-                            <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233201100146
+                            <img src="./img/contact/whatsapp.svg" alt="" class="message-icon"> +233509682103
                         </button>
                     </a>
                 </li>
@@ -319,8 +319,8 @@
             </ul>
         </div>
         <div class="socialize">
-            <h2>How about we become friends here :) <img src="./img/contact/048-arrow.svg" alt="" class="down-icon">
-            </h2>
+            <h3>How about we become friends here :) <img src="./img/contact/048-arrow.svg" alt="" class="down-icon">
+            </h3>
             <ul class="social">
                 <li class="social-li">
                     <a href="https://www.linkedin.com/in/alara-joel-b16865b6/" target="_blank"><img src="./img/contact/045-linkedin.svg" alt="" class="social-icon">
