made things really responsive esp the achievements section

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -170,7 +170,7 @@
             <div class="content">
                 <h2>May, 2018</h2>
                 <h3>Certification: RWD Principles: Udemy</h3>
-                <p>This added to my knowledge in RWD principles, by Jonas .</p>
+                <p>This added to my knowledge in RWD principles, by Jonas.</p>
                 <p>Learn how to build websites, with user experience in mind.</p>
                 <a href="https://res.cloudinary.com/stealthman22/image/upload/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
             </div>
@@ -246,7 +246,7 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-four"></div>
             <div class="reasons-card-text">
-                <h2>Modern</h2>
+                <h2>Innovative</h2>
                 <p>I strive to stay abrest with modern techniques and approaches, hence always giving my team/clients a competitive edge
                 </p>
             </div>
