Cleaning up mobile responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -30,24 +30,13 @@
             <!-- <li class="nav-link"><a href="" class="nav-items">About Me</a></li> -->
         </ul>
     </nav>
-    <!--    <div class="eyes">
-        <div class="eye">
-            <div class="ball"></div>
-        </div>
-
-        <div class="eye">
-            <div class="ball"></div>
-
-        </div>
-
-    </div> -->
 
     <main class="hero" id="home">
         <time class="time"></time>
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
         </h1>
-        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a UI/UX enthusaist", "a blogger"]' data-wait="2000"></span></h2>
+        <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a Ui/Ux enthusaist", "a blogger"]' data-wait="2000"></span></h2>
         <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 
@@ -247,7 +236,7 @@
             <div class="reasons-card-img reasons-card-img-four"></div>
             <div class="reasons-card-text">
                 <h2>Innovative</h2>
-                <p>I strive to stay abrest with modern techniques and approaches, hence always giving my team/clients a competitive edge
+                <p>I strive to stay abrest with modern workflows, hence always giving my team/clients a competitive edge.
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-odd">
@@ -270,7 +259,8 @@
             <div class="reasons-card-img reasons-card-img-six"></div>
             <div class="reasons-card-text">
                 <h2>Team-Spirit</h2>
-                <p> I thrive well in team-motivated environments, and always ensure to carry team members and stakeholders along..
+                <p> I thrive in teamed environments, and ensure to carry everyone  along.
+                    Communication is one of my strongest points.
                 </p>
             </div>
             <div class="reasons-footer  reasons-footer-even">
