--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <!-- <li class="nav-link"><a href="" class="nav-items">About Me</a></li> -->
         </ul>
     </nav>
-
+<div class="hero-container">
     <main class="hero" id="home">
         <time class="time"></time>
         <h1 class="greeting">
@@ -39,7 +39,7 @@
         <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a Ui/Ux enthusaist", "a blogger"]' data-wait="2000"></span></h2>
         <!-- <button class="btn">Click to scroll down</button> -->
     </main>
-
+</div>
     <!-- Showcase -->
 
     <section class="cards-container" id="showcase">
@@ -136,7 +136,7 @@
             </div>
         </div>
     </section>
-
+<div class="timeline-container">
     <section class="timeline" id="achievements">
         <div class="container left">
             <div class="content">
@@ -195,7 +195,7 @@
             </div>
         </div>
     </section>
-
+</div>
     <section class="reasons" id="whyme">
 
         <div class="reasons-card">
