did some npm fixes that might break things

--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
       <img srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" src="/img/image-to-lazy-load-1x.jpg" alt="Alternative text to describe image.">
     </noscript> -->
 
-
+<!-- Smooth scroll -->
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js">
     </script>
     <script>
