swapping images url to cloudinary

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <img src="../src/img/showcase/face box_dell-xps15-front.png" alt="" class="card-pic card-pic-one">
-                <img src="../src/img/showcase/smart brain ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two ">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" class="card-pic card-pic-one">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299306/new-portfolio/showcase/smart_brain_ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two ">
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
@@ -64,8 +64,8 @@
         </div>
         <div class=" cards  cards-two">
             <div class=" cards-main cards-main-two ">
-                <img src="../src/img/showcase/robo ipad_ipad_black_landscape.png" alt="" class="card-pic card-pic-three">
-                <img src="../src/img/showcase/robo iphone 5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" class="card-pic card-pic-three">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299290/new-portfolio/showcase/robo_iphone_5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four">
             </div>
 
             <div class=" cards-info ">
@@ -83,8 +83,8 @@
 
         <div class=" cards cards-three ">
             <div class=" cards-main cards-main-three ">
-                <img src="../src/img/showcase/boldness_macbookpro15_front.png" alt="" class="card-pic-five">
-                <img src="../src/img/showcase/stories ipad_ipad_black_portrait.png" alt="" class="card-pic-six">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="" class="card-pic-five">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296861/new-portfolio/showcase/stories_ipad_ipad_black_landscape.png" alt="" class="card-pic-six">
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
@@ -101,8 +101,8 @@
         </div>
         <div class=" cards  cards-four">
             <div class=" cards-main cards-main-four ">
-                <img src="../src/img/showcase/logistics landing_macbookpro13_front.png" alt="" class="card-pic-seven">
-                <img src="../src/img/showcase/logistics iphone_iphonexspacegrey_portrait.png" alt="" class="card-pic-eight">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="" class="card-pic-seven">
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299287/new-portfolio/showcase/logistics_iphone_iphonexspacegrey_portrait.png" alt="" class="card-pic-eight">
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
@@ -118,8 +118,7 @@
 
         <div class=" cards cards-five">
             <div class=" cards-main cards-main-five">
-                <img src="../src/img/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
-                <!-- <img src="../src/img/showcase/game landing_ipad_white_portrait.png" alt="" class="card-pic-ten"> -->
+                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
 
 
             </div>
@@ -152,7 +151,7 @@
                 <h3>Cerification: Complete Web Developer</h3>
                 <p> I completed this intensive Zero to Mastery course with tutor Andrei Neagoie.</p>
                 <p>Used React, Node, Express and PostgreSQL</p>
-                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
             </div>
         </div>
         <div class="container left">
@@ -161,7 +160,7 @@
                 <h3>Certification: RWD Principles: Udemy</h3>
                 <p>This added to my knowledge in RWD principles, by Jonas.</p>
                 <p>Learn how to build websites, with user experience in mind.</p>
-                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
             </div>
         </div>
         <div class="container right">
