working on ways to make lazy loading better

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" class="card-pic card-pic-one">
+                <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+                <img class="lazy card-pic card-pic-one" src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
                 <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299306/new-portfolio/showcase/smart_brain_ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two ">
             </div>
             <div class=" cards-info ">
@@ -376,3 +377,4 @@
 
 
 </html>
+
