--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
 <div class="hero-container">
-    <main class="hero" id="home">
+    <main class="hero " id="home">
         <time class="time"></time>
         <h1 class="greeting">
             <span class="greeting-js"> </span> I'm Joel
@@ -45,9 +45,9 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-                <img class="lazy card-pic card-pic-one" src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299306/new-portfolio/showcase/smart_brain_ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two ">
+                <!-- <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
+                <img class="lazy card-pic card-pic-one" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
+                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299306/new-portfolio/showcase/smart_brain_ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two "> -->
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
@@ -57,16 +57,16 @@
                     <p>It also boasts of a fully functional SQL database built with PostgreSQL </p>
                 </p>
                 <span class="info-bottom"> <a href="https://github.com/stealthman22/smart-brain" target="_blank"> <img
-                            src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a>
-                    <a href="https://image-recog-front-end.herokuapp.com/" target="_blank"> <img
-                            src="./img/showcase/link.svg" alt="" class="info-icons"> </a>
+                            src="./img/showcase/web-programming.svg" alt="" class="info-icons ">code</a>
+                    <a href="https://image-recog-front-end.herokuapp.com/" target="_blank"><img
+                            src="./img/showcase/link.svg" alt="" class="info-icons"> link </a>
                 </span>
             </div>
         </div>
         <div class=" cards  cards-two">
             <div class=" cards-main cards-main-two ">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" class="card-pic card-pic-three">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299290/new-portfolio/showcase/robo_iphone_5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four">
+                <img class=" lazy card-pic card-pic-three" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
+                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299290/new-portfolio/showcase/robo_iphone_5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four"> -->
             </div>
 
             <div class=" cards-info ">
@@ -84,8 +84,8 @@
 
         <div class=" cards cards-three ">
             <div class=" cards-main cards-main-three ">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="" class="card-pic-five">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296863/new-portfolio/showcase/stories_ipad_ipad_black_portrait.png" alt="" class="card-pic-six">
+                <img class="lazy card-pic-five" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
+                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586296863/new-portfolio/showcase/stories_ipad_ipad_black_portrait.png" alt="" class="card-pic-six"> -->
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
@@ -102,8 +102,8 @@
         </div>
         <div class=" cards  cards-four">
             <div class=" cards-main cards-main-four ">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="" class="card-pic-seven">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586299287/new-portfolio/showcase/logistics_iphone_iphonexspacegrey_portrait.png" alt="" class="card-pic-eight">
+                <img class="lazy card-pic-seven" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
+                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299287/new-portfolio/showcase/logistics_iphone_iphonexspacegrey_portrait.png" alt="" class="card-pic-eight"> -->
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
@@ -119,7 +119,7 @@
 
         <div class=" cards cards-five">
             <div class=" cards-main cards-main-five">
-                <img src="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="" class="card-pic-nine">
+                <img class="lazy card-pic-nine" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="">
 
 
             </div>
@@ -137,7 +137,7 @@
         </div>
     </section>
 <div class="timeline-container">
-    <section class="timeline" id="achievements">
+    <section class="timeline lazy-bg" id="achievements">
         <div class="container left">
             <div class="content">
                 <h2>January, 2020</h2>
@@ -152,7 +152,7 @@
                 <h3>Cerification: Complete Web Developer</h3>
                 <p> I completed this intensive Zero to Mastery course with tutor Andrei Neagoie.</p>
                 <p>Used React, Node, Express and PostgreSQL</p>
-                <a href="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
             </div>
         </div>
         <div class="container left">
@@ -161,7 +161,7 @@
                 <h3>Certification: RWD Principles: Udemy</h3>
                 <p>This added to my knowledge in RWD principles, by Jonas.</p>
                 <p>Learn how to build websites, with user experience in mind.</p>
-                <a href="https://res.cloudinary.com/stealthman22/image/upload/fl_progressive:semi/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
+                <a href="https://res.cloudinary.com/stealthman22/image/upload/v1583261244/RWD_Cert.jpg" target="_blank">View my certificate here</a>
             </div>
         </div>
         <div class="container right">
